All sorts of stuff

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/three": "^0.139.0",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.21",
     "three": "^0.129.0",
     "tsc": "^2.0.3",
