--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "fs": "0.0.1-security",
     "lodash": "^4.17.21",
     "three": "^0.129.0",
