--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w"
   },
   "keywords": [
-    "webgl",    
+    "webgl",
     "three.js",
     "es6",
     "webpack",
@@ -19,7 +19,7 @@
     "data",
     "homoiconic",
     "visualization"
-  ],  
+  ],
   "dependencies": {
     "axios": "^1.7.4",
     "fs": "0.0.1-security",
@@ -35,10 +35,12 @@
     "@types/lodash": "^4.17.6",
     "@types/three": "^0.165.0",
     "babel-loader": "^8.3.0",
+    "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
     "webpack": "^5.92.1",
